Add start of remotespace implementation, Vendor class, Marketplace